force-app/main/default/objects/Account/fields/Number_of_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Campaign_Members__c</fullName>
    <label>Number of Campaign Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>