force-app/main/default/objects/Account/fields/Only_Default_Contact__c.field-meta.xml
<CustomField>
    <fullName>Only_Default_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only_Default_Contact</label>
    <type>Checkbox</type>
</CustomField>