force-app/main/default/objects/Account/fields/Out_of_Zip__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Zip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out_of_Zip</label>
    <type>Checkbox</type>
</CustomField>