force-app/main/default/objects/Account/listViews/jatin.listView-meta.xml
<ListView>
    <fullName>jatin</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>equals</operation>
        <value>CA</value>
    </filters>
    <filters>
        <field>ACCOUNT.PHONE1</field>
        <operation>equals</operation>
        <value>(650) 867-3450</value>
    </filters>
    <label>jatin</label>
</ListView>